--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.guo.news">
 
-    <permission
-        android:name="com.guo.news.provider.READ" />
+    <!--<permission-->
+        <!--android:name="com.guo.news.provider.READ" android:protectionLevel="dangerous" android:icon="@mipmap/ic_launcher" android:label="Read News" />-->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.guo.com.guo.news.ui.MainActivity">
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -20,10 +20,8 @@
         <provider
             android:authorities="com.guo.news"
 
-            android:name="com.guo.com.guo.news.data.local.NewsProvider"
-
-            android:exported="true"
-            android:readPermission="com.guo.news.provider.READ"/>
+            android:name=".data.local.NewsProvider"
+            android:exported="false" />
     </application>
 
 </manifest>
