--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,10 @@ android {
     }
 }
 
+String supportLibVersion = '23.4.0'
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-
-
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile "com.android.support:appcompat-v7:23.4.0"
     compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.jakewharton:butterknife:7.0.1'
@@ -39,6 +38,11 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:cardview-v7:23.4.0'
+//    compile('com.marshalchen.ultimaterecyclerview:library:0.7.0',{
+//        exclude group : 'com.android.support', module: 'support-annotations';
+//        exclude group : 'com.android.support', module: 'support-v13'
+//    })
 
     androidTestCompile 'com.android.support:support-annotations:23.4.0'
     androidTestCompile 'com.android.support.test:runner:0.5'
