--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,25 +26,29 @@ android {
     }
 }
 
-String supportLibVersion = '23.4.0'
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile "com.android.support:appcompat-v7:23.4.0"
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile "com.android.support:appcompat-v7:$rootProject.ext.supportLibVersion"
+    compile "com.android.support:design:$rootProject.ext.supportLibVersion"
+    compile "com.android.support:recyclerview-v7:$rootProject.ext.supportLibVersion"
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.code.gson:gson:2.7'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.android.support:support-v4:23.4.0'
-    compile 'com.android.support:cardview-v7:23.4.0'
+    compile "com.android.support:cardview-v7:$rootProject.ext.supportLibVersion"
+    compile "com.android.support:support-v4:$rootProject.ext.supportLibVersion"
+//    TODO why
 //    compile('com.marshalchen.ultimaterecyclerview:library:0.7.0',{
-//        exclude group : 'com.android.support', module: 'support-annotations';
-//        exclude group : 'com.android.support', module: 'support-v13'
+//        exclude group : 'com.android.support', module: 'appcompat-v7';
+//        exclude group : 'com.android.support', module: 'recyclerview-v7';
 //    })
 
-    androidTestCompile 'com.android.support:support-annotations:23.4.0'
+    compile 'io.reactivex:rxjava:1.1.6'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+
+    androidTestCompile "com.android.support:support-annotations:$rootProject.ext.supportLibVersion"
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
