--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.guo.news">
 
-    <!--<permission-->
-        <!--android:name="com.guo.news.provider.READ" android:protectionLevel="dangerous" android:icon="@mipmap/ic_launcher" android:label="Read News" />-->
+    <!-- <permission -->
+    <!-- android:name="com.guo.news.provider.READ" android:protectionLevel="dangerous" android:icon="@mipmap/ic_launcher" android:label="Read News" /> -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
+    <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,11 +22,32 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <provider
-            android:authorities="com.guo.news"
 
+        <provider
             android:name=".data.local.NewsProvider"
+            android:authorities="@string/news_provider_authority"
             android:exported="false" />
+
+        <service android:name=".data.remote.AuthenticatorService">
+            <intent-filter>
+                <action android:name="android.accounts.AccountAuthenticator" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.accounts.AccountAuthenticator"
+                android:resource="@xml/authenticator" />
+        </service>
+        <service
+            android:name=".data.remote.NewsSyncService"
+            android:process=":sync"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.content.SyncAdapter" />
+            </intent-filter>
+            <meta-data
+                android:name="android.content.SyncAdapter"
+                android:resource="@xml/syncadapter"/>
+        </service>
     </application>
 
 </manifest>
