--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.READ_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.WRITE_SYNC_SETTINGS" />
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 
     <application
         android:allowBackup="true"
@@ -26,7 +28,8 @@
         <provider
             android:name=".data.local.NewsProvider"
             android:authorities="@string/news_provider_authority"
-            android:exported="false" />
+            android:syncable="true"
+            android:exported="true" />
 
         <service android:name=".data.remote.AuthenticatorService">
             <intent-filter>
@@ -37,9 +40,9 @@
                 android:name="android.accounts.AccountAuthenticator"
                 android:resource="@xml/authenticator" />
         </service>
+            <!--android:process=":sync"-->
         <service
             android:name=".data.remote.NewsSyncService"
-            android:process=":sync"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.content.SyncAdapter" />
