--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
     <uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,8 +27,8 @@
         <provider
             android:name=".data.local.NewsProvider"
             android:authorities="@string/news_provider_authority"
-            android:syncable="true"
-            android:exported="true" />
+            android:exported="true"
+            android:syncable="true" />
 
         <service android:name=".data.remote.AuthenticatorService">
             <intent-filter>
@@ -40,28 +39,33 @@
                 android:name="android.accounts.AccountAuthenticator"
                 android:resource="@xml/authenticator" />
         </service>
-            <!--android:process=":sync"-->
+        <!-- android:process=":sync" -->
         <service
             android:name=".data.remote.NewsSyncService"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.content.SyncAdapter" />
             </intent-filter>
+
             <meta-data
                 android:name="android.content.SyncAdapter"
-                android:resource="@xml/syncadapter"/>
+                android:resource="@xml/syncadapter" />
         </service>
 
         <receiver android:name=".appwidget.NewsListWidgetProvider">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
+
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/news_appwidget_provider_info"/>
+                android:resource="@xml/news_appwidget_provider_info" />
         </receiver>
-        <service android:name=".appwidget.NewsListRemoteViewService"
-            android:permission="android.permission.BIND_REMOTEVIEWS"/>
+
+        <service
+            android:name=".appwidget.NewsListRemoteViewService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
     </application>
 
 </manifest>
