--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -66,6 +66,7 @@
             android:name=".appwidget.NewsListRemoteViewService"
             android:permission="android.permission.BIND_REMOTEVIEWS" />
 
+        <activity android:name=".ui.NewsActivity"></activity>
     </application>
 
 </manifest>
