--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,14 +73,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity" />
         </activity>
-        <activity android:name=".ui.CommentActivity" />
+        <activity android:name=".ui.CommentActivity"
+            android:windowSoftInputMode="stateVisible"/>
         <activity android:name=".appwidget.SelectWidgetSectionActivity" />
         <activity android:name=".ui.SelectInterestedSectionActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
