--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     compile "com.android.support:recyclerview-v7:$rootProject.ext.supportLibVersion"
     compile "com.android.support:cardview-v7:$rootProject.ext.supportLibVersion"
     compile "com.android.support:support-v4:$rootProject.ext.supportLibVersion"
+    compile "com.android.support:palette-v7:$rootProject.ext.supportLibVersion"
 
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
@@ -49,6 +50,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.beloo.widget:ChipsLayoutManager:0.2.4@aar'
 
+//    compile
     androidTestCompile "com.android.support:support-annotations:$rootProject.ext.supportLibVersion"
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
