--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -73,10 +73,18 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity" />
         </activity>
-        <activity android:name=".ui.CommentActivity"
-            android:windowSoftInputMode="stateVisible"/>
+        <activity
+            android:name=".ui.CommentActivity"
+            android:windowSoftInputMode="stateVisible" />
         <activity android:name=".appwidget.SelectWidgetSectionActivity" />
-        <activity android:name=".ui.SelectInterestedSectionActivity">
+        <activity android:name=".ui.SelectInterestedSectionActivity"/>
+        <activity
+            android:name=".ui.SettingsActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName=".ui.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".ui.MainActivity" />
         </activity>
     </application>
 
