--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,9 @@ dependencies {
     compile "com.android.support:support-v4:$rootProject.ext.supportLibVersion"
     compile "com.android.support:palette-v7:$rootProject.ext.supportLibVersion"
 
-//    compile
+    compile 'com.google.firebase:firebase-ads:9.0.0'
+    compile 'com.google.firebase:firebase-core:9.0.0'
+
     androidTestCompile "com.android.support:support-annotations:$rootProject.ext.supportLibVersion"
     androidTestCompile 'com.android.support.test:runner:0.5'
     androidTestCompile 'com.android.support.test:rules:0.5'
@@ -55,5 +57,5 @@ dependencies {
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.beloo.widget:ChipsLayoutManager:0.2.4@aar'
-    compile 'com.google.android.gms:play-services-analytics:9.0.0'
+
 }
