--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,10 +17,20 @@ android {
 
     }
 
+    signingConfigs {
+        release {
+            storeFile file('release.jks')
+            storePassword 'android'
+            keyAlias 'release'
+            keyPassword 'android'
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.release
         }
     }
     buildTypes.each {
@@ -37,8 +47,9 @@ dependencies {
     compile "com.android.support:support-v4:$rootProject.ext.supportLibVersion"
     compile "com.android.support:palette-v7:$rootProject.ext.supportLibVersion"
 
-    compile 'com.google.firebase:firebase-ads:9.0.0'
     compile 'com.google.firebase:firebase-core:9.0.0'
+    compile 'com.google.firebase:firebase-ads:9.0.0'
+    compile 'com.google.firebase:firebase-crash:9.0.0'
 
     androidTestCompile "com.android.support:support-annotations:$rootProject.ext.supportLibVersion"
     androidTestCompile 'com.android.support.test:runner:0.5'
