--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,14 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".NewsApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".NewsApplication"
         android:theme="@style/AppTheme.Main">
-        <activity android:name=".ui.MainActivity"
+        <activity
+            android:name=".ui.MainActivity"
             android:theme="@style/AppTheme.Main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -69,8 +70,8 @@
 
         <activity
             android:name=".ui.NewsActivity"
-            android:theme="@style/AppTheme.NewsDetail"
-            android:parentActivityName=".ui.MainActivity">
+            android:parentActivityName=".ui.MainActivity"
+            android:theme="@style/AppTheme.NewsDetail">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity" />
@@ -79,7 +80,7 @@
             android:name=".ui.CommentActivity"
             android:windowSoftInputMode="stateVisible" />
         <activity android:name=".appwidget.SelectWidgetSectionActivity" />
-        <activity android:name=".ui.SelectInterestedSectionActivity"/>
+        <activity android:name=".ui.SelectInterestedSectionActivity" />
         <activity
             android:name=".ui.SettingsActivity"
             android:label="@string/title_activity_settings"
@@ -88,12 +89,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".ui.MainActivity" />
         </activity>
+
         <receiver android:name=".data.AppUpdater$DownloadReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.DOWNLOAD_NOTIFICATION_CLICKED" />
                 <action android:name="android.intent.action.DOWNLOAD_COMPLETE" />
             </intent-filter>
         </receiver>
+
     </application>
 
 </manifest>
